# user-management

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.devin/skills/: github-team-sync.md
docs/: bulk.md  design.md  github-sync.md  github-team-sync.md  secrets.md
examples/: config-multi-org.yaml  config.yaml
src/user_management/: __init__.py  cli.py
src/user_management/bulk/: __init__.py  cli.py  deepwiki.py  spreadsheet.py  sync.py
src/user_management/bulk/templates/: deepwiki-users.csv  orgs.csv  users.csv
src/user_management/core/: __init__.py  client.py  config.py  errors.py  models.py
src/user_management/doctor/: __init__.py  checks.py  cli.py
src/user_management/github_sync/: __init__.py  cli.py  config.py  config.yaml.example  github_client.py  models.py  sync.py
tests/: conftest.py
tests/bulk/: test_spreadsheet.py  test_sync.py
tests/core/: test_client.py
tests/fixtures/: test_bulk_orgs.csv  test_bulk_users.csv  test_edge_cases_orgs.csv  test_edge_cases_users.csv  test_orgs_user.csv  test_users_live.csv
tests/github_sync/: test_config.py  test_email_resolution.py  test_find_github_connection.py
